--- a/deploy/sigma/templates/worker/deployment.yaml
+++ b/deploy/sigma/templates/worker/deployment.yaml
@@ -13,9 +13,9 @@ spec:
       {{- include "sigma.worker.labels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
         rollme: {{ randAlphaNum 5 | quote }}
+      {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
@@ -27,6 +27,7 @@ spec:
       {{- end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      serviceAccountName: {{ include "sigma.fullname" . | quote }}
       containers:
         - name: {{ printf "%s-worker" .Chart.Name }}
           securityContext:
