--- a/deploy/sigma/templates/serviceaccount.yaml
+++ b/deploy/sigma/templates/serviceaccount.yaml
@@ -1,9 +1,10 @@
+{{- if and .Values.config.daemon.builder.enabled ( eq .Values.config.daemon.builder.type "kubernetes" ) }}
 ---
 kind: Role
 apiVersion: {{ include "common.capabilities.rbac.apiVersion" . }}
 metadata:
   name: {{ include "sigma.fullname" . | quote }}
-  namespace: {{ include "common.names.namespace" . | quote }}
+  namespace: {{ .Values.config.daemon.builder.kubernetes.namespace | quote }}
   {{- $versionLabel := dict "app.kubernetes.io/version" ( include "common.images.version" ( dict "imageRoot" .Values.image "chart" .Chart ) ) }}
   {{- $labels := include "common.tplvalues.merge" ( dict "values" ( list .Values.commonLabels $versionLabel ) "context" . ) }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" $labels "context" $ ) | nindent 4 }}
@@ -14,7 +15,7 @@ rules:
   - apiGroups:
       - ""
     resources:
-      - configmaps
+      - pods
     verbs:
       - get
       - list
@@ -26,7 +27,7 @@ rules:
   - apiGroups:
       - ""
     resources:
-      - configmaps/status
+      - pods/status
     verbs:
       - get
       - update
@@ -34,26 +35,15 @@ rules:
   - apiGroups:
       - ""
     resources:
-      - events
+      - pods/finalizers
     verbs:
-      - create
-  - apiGroups:
-      - "coordination.k8s.io"
-    resources:
-      - leases
-    verbs:
-      - get
-      - list
-      - watch
-      - create
       - update
-      - patch
-      - delete
 ---
 kind: RoleBinding
 apiVersion: {{ include "common.capabilities.rbac.apiVersion" . }}
 metadata:
   name: {{ include "sigma.fullname" . | quote }}
+  namespace: {{ .Values.config.daemon.builder.kubernetes.namespace | quote }}
   {{- $versionLabel := dict "app.kubernetes.io/version" ( include "common.images.version" ( dict "imageRoot" .Values.image "chart" .Chart ) ) }}
   {{- $labels := include "common.tplvalues.merge" ( dict "values" ( list .Values.commonLabels $versionLabel ) "context" . ) }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" $labels "context" $ ) | nindent 4 }}
@@ -67,7 +57,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ template "sigma.fullname" . }}
-    namespace: {{ include "common.names.namespace" . | quote }}
+    namespace: {{ .Release.Namespace | quote }}
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -82,3 +72,4 @@ metadata:
   annotations: {{- include "common.tplvalues.render" ( dict "value" $annotations "context" $) | nindent 4 }}
   {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
+{{- end }}
