--- a/deploy/sigma/templates/worker/hpa.yaml
+++ b/deploy/sigma/templates/worker/hpa.yaml
@@ -3,6 +3,7 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "sigma.worker" . }}
+  namespace: "{{ .Release.Namespace }}"
   labels:
     {{- include "sigma.worker.labels" . | nindent 4 }}
 spec:
