--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -136,7 +136,7 @@ daemon:
       network: sigma
     kubernetes:
       kubeconfig:
-      namespace: default
+      namespace: sigma-builder
     podman:
       uri: unix:///run/podman/podman.sock
 
