--- a/deploy/sigma/templates/distribution/hpa.yaml
+++ b/deploy/sigma/templates/distribution/hpa.yaml
@@ -3,6 +3,7 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "sigma.distribution" . }}
+  namespace: "{{ .Release.Namespace }}"
   labels:
     {{- include "sigma.distribution.labels" . | nindent 4 }}
 spec:
