--- a/deploy/sigma/templates/ingress.yaml
+++ b/deploy/sigma/templates/ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "sigma.fullname" . }}
+  namespace: "{{ .Release.Namespace }}"
   labels:
     {{- include "sigma.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
