--- a/deploy/sigma/templates/worker/service.yaml
+++ b/deploy/sigma/templates/worker/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "sigma.worker" . }}
+  namespace: "{{ .Release.Namespace }}"
   labels:
     {{- include "sigma.worker.labels" . | nindent 4 }}
 spec:
