--- a/deploy/sigma/values.yaml
+++ b/deploy/sigma/values.yaml
@@ -100,7 +100,7 @@ serviceAccount:
   ## @param serviceAccount.annotations Additional Service Account annotations (evaluated as a template)
   annotations: {}
   ## @param serviceAccount.automountServiceAccountToken Automount service account token for the server service account
-  automountServiceAccountToken: false
+  automountServiceAccountToken: true
 
 config:
   log:
@@ -121,7 +121,16 @@ config:
     type: s3
     filesystem:
       path: /
-  # Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
+  daemon:
+    builder:
+      enabled: true
+      image:
+        repository: tosone/sigma-builder
+        tag: latest
+      type: kubernetes
+      kubernetes:
+        kubeconfig: ""
+        namespace: sigma-builder
   proxy:
     enabled: true
     endpoint: https://registry-1.docker.io
