--- a/deploy/sigma/templates/distribution/service.yaml
+++ b/deploy/sigma/templates/distribution/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "sigma.distribution" . }}
-  namespace: "{{ .Release.Namespace }}"
+  name: {{ include "sigma.distribution" . | quote }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "sigma.distribution.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.service.type | quote }}
   ports:
     - port: {{ .Values.service.distribution.port }}
       targetPort: http
