--- a/deploy/sigma/templates/web/hpa.yaml
+++ b/deploy/sigma/templates/web/hpa.yaml
@@ -2,15 +2,15 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "sigma.web" . }}
-  namespace: "{{ .Release.Namespace }}"
+  name: {{ include "sigma.web" . | quote }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "sigma.web.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "sigma.web" . }}
+    name: {{ include "sigma.web" . | quote }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
